# perfil_de_cliente_ideal

./: Makefile  pyproject.toml
perfil_de_cliente_ideal/: LICENSE  Makefile  README.md  cmd.py  features.py  pipeline.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
perfil_de_cliente_ideal/modeling/: model.py
perfil_de_cliente_ideal/models/: linear_regression.joblib
perfil_de_cliente_ideal/notebooks/: projeto_perfil_cliente_ideal.ipynb
perfil_de_cliente_ideal/perfil_de_cliente_ideal/: __init__.py  config.py  dataset.py  features.py  plots.py
perfil_de_cliente_ideal/perfil_de_cliente_ideal/modeling/: model.py  predict.py  train.py
perfil_de_cliente_ideal/reports/: predicao_2025-09-23.csv
