[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "perfil_de_cliente_ideal"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Marco Ant\u00f4nio Ferri" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["perfil_de_cliente_ideal"]
include = ["pyproject.toml", "perfil_de_cliente_ideal/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["perfil_de_cliente_ideal"]
force-sort-within-sections = true

